--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       font-family: Helvetica Neue,Helvetica,Arial,sans-serif; 
     }
   </style>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146370168-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-146370168-1');
+  </script>
 </head>
 <body>
 
